[Issue 179] [WIP] enhances project's view

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container" border="1"> 
 	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
 	<form>
-		<div class="container well">
+		<div class="container well" align="center" style="width:900px">
 			<div class="btn-toolbar" style="margin: 0;">
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-file"></i> <%= t(:import) %> <span class="caret"></span></button>
@@ -37,28 +37,33 @@
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
 				</div>
 			</div><br>
-			<table class="table table-bordered" style="width:800px;background-color:white" >
-				<col style="width:25%">
-				<col style="width:75%">
-				<tr> 
-					<td style="text-align:center"><%= t(:word) %></td>
-					<td style="text-align:center"><%= t(:meaning) %></td>
-				</tr>
-			</table>
 			<table class="table table-hover table-bordered table-condensed"style="width:800px;background-color:white">
 				<col style="width:25%">
 				<col style="width:25%">
-				<col style="width:50%">
-				<% count=0 %>
-				<% while count<@words.count %>
-				<tr>
-					<td style="text-align:center"><%= @words[count].name %></td>
-					<td style="text-align:center"><%= @synonyms[count].name %></td>
-					<td><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
-						<%= link_to t(:remove_from_project), action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id %></td>
-						<% count = count+1 %>
-					</tr>
+				<col style="width:10%">
+				<% if @words.count == 0 %>
+					<div class="well">
+    					<span>
+      						<%= t(:no_words_in_project) %>
+    					</span>
+  					</div>
+  					<% else %>
+  						<th style="text-align:center"><%= t(:word) %></th>
+						<th style="text-align:center"><%= t(:meaning) %></th>
+						<th style="text-align:center"></th>
+							<% count=0 %>
+						<% while count<@words.count %>
+							<tr>
+							<td style="text-align:center"><%= @words[count].name %></td>
+							<td style="text-align:center"><%= @synonyms[count].name %></td>
+							<td style="text-align:center" ><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
+							<%= link_to t(:remove_from_project), {action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id}, {:style=>'color:#FF0000', :class => "css_class"} %></td>
+							<% count = count+1 %>
+							</tr>
+						<% end %>
 					<% end %>
+				
+				
 				</table>
 			</div>
 		</form>
