[issue #177][WIP]added translation to messege

--- a/arability/app/views/follow/list_followed.html.erb
+++ b/arability/app/views/follow/list_followed.html.erb
@@ -1,5 +1,5 @@
 <% if !@keywords.empty? %>
-<div class="well" style="font-weight: bold; text-align:center;">Follow a word to recieve an email with every update. Updates include a new Synonym addition to a Keyword or the top voted Synonym gets changed.</div>
+<div class="well" style="font-weight: bold; text-align:center;"><%= t(:follow_words_info)%></div>
 <div style="width:800px; margin:0 auto;">
 <table class="table table-hover">
   <thead>
