[WIP] fixed issue with score var and translated score view

--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -16,8 +16,8 @@
         $("#zone").append($(button));
     <% end %>
 
-    score = '<h1 class="award-title"><%= t(:scored) %> <span id="score"><%= @score %></span> </h1>';
-    $("#zone").append($(score));
+    game_score = '<h1 class="award-title"><%= t(:scored) %> <span id="score"><%= @score %></span> </h1>';
+    $("#zone").append($(game_score));
     <% if @won_trophies.length != 0 %>
         success = '<h1 class="award-title"><%= t(:congrats_prizes) %></h1>';
         trophies = [];
