--- a/arability/app/views/games/get_score_only.js.erb
+++ b/arability/app/views/games/get_score_only.js.erb
@@ -10,7 +10,7 @@
   <% else %>
       score = '<h1 class="award-title"><%= t(:scored) %> <span id="score"><%= @score %></span> </h1>';
       $("#zone").append($(score));
-      button = '<a href="/game" class="btn btn-success btn-large" style="postion:top;margin:20px; padding:10px; font-size:24px;">Restart Game</a>';
+      button = '<a href="/game" class="btn btn-success btn-large" style="postion:top;margin:20px; padding:10px; font-size:24px;"><%= t(:restart_game) %></a>';
       $("#zone").append($(button));
   <% end %>
 <% end %>
