[WIP][issue #190]place for twitter invitation built

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -67,6 +67,10 @@
     clear();
     $.get("/games/showtrophies");
   }
+  function inviteTwitter() {
+    clear();
+    $("#zone").append('')
+  }
 
 </script>
 
@@ -86,6 +90,9 @@
     </div>
     <div class="nav-box">
      إعدادات
+    </div>
+    <div class = "nav-box" onclick="inviteTwitter()">
+      الدعوات
     </div>
     <div id="level" class="nav-box">
       
