--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -467,3 +467,11 @@ margin-left: 80px;
   margin-left: auto;
 }
 
+#gameover-popup{
+  font-size: 2000%;
+  color: white;
+  position: absolute;
+  margin-top: 170px;
+  opacity: 1;
+  margin-right: 150px;
+}
