--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -22,6 +22,7 @@
   function check_empty_words(){
     if(words.length == 0){
         if(win == true){
+          alert('yo win is true');
          getTrophies(level, score);
       }
       else{
