--- a/arability/app/assets/stylesheets/application.css.scss
+++ b/arability/app/assets/stylesheets/application.css.scss
@@ -18,9 +18,26 @@ body {
 .boxed {
   width: 300px
 }
-.radio{
-    display:float;
-}
+
 .req{
     color: red;
+}
+
+label.radio {
+	display: inline-block;
+	margin-top: 8px;
+	margin-right: 15px;
+}
+
+label.radio:first-child {
+	margin-left: 30px;
+}
+
+div.d5pxdown {
+	position: relative;
+	top: 13px;
+}
+
+div.d5pxup input {
+	width: 95px;
 }
