[WIP][issue #190]story modified and integrated with game view, code cleaned, and story finished

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -69,7 +69,7 @@
   }
   function inviteTwitter() {
     clear();
-    $("#zone").append('')
+    $("#zone").append('<a href="http://www.twitter.com/share?text=http://localhost:3000/ تعالى إلعب معي على"><img src="/assets/twitter_share.png" style="height:150px;position:relative;top:70px;right:190px;"></a>')
   }
 
 </script>
@@ -94,9 +94,7 @@
     <div class = "nav-box" onclick="inviteTwitter()">
       الدعوات
     </div>
-    <div id="level" class="nav-box">
-      
-    </div>
+
   </div>
 
   <div class="zone" id="zone" style="text-align:right; direction: rtl;">
