[issue #169] [WIP] shifts the database access from the view to the controller

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript" charset="utf-8">
   
-  var words=["car","sar","sad","sfd"];
+  var words=["car","desk","jd"];
 
   function get_words(){
     return words;
