[WIP][issue #185]host of tweet have been changed to be our app, code cleaned and story finished

--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -18,7 +18,7 @@
         $("#zone").append($(button));
     <% end %>
 
-    score = '<h1 class="award-title"><%= t(:scored) %> <span id="score"><%= @score %></span> <a href="https://twitter.com/share" class="twitter-share-button" data-text="لقد حصلت على <%= @score %> نقطة" data-via="arability">Tweet</a> </h1>';
+    score = '<h1 class="award-title"><%= t(:scored) %> <span id="score"><%= @score %></span> <a href="https://twitter.com/share" class="twitter-share-button" data-text="لقد حصلت على <%= @score %> نقطة" data-via="SmartSoft2013">Tweet</a> </h1>';
     $("#zone").append($(score));
     <% if @won_trophies.length != 0 %>
         success = '<h1 class="award-title"><%= t(:congrats_prizes) %></h1>';
