--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -19,7 +19,11 @@
 <body>
 
 <%= render 'shared/navbar' %>
-
+<style type="text/css">
+  ::-webkit-validation-bubble-message {
+   display: none;
+  }
+</style>
 
 <div role="main" id="main">
   <div class="container">
