--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -64,25 +64,23 @@ function suggest_synonym_to_word(keyword_id){
 
 vote_form=[];
 vote_form.push('<div style="position:relative; left: 10px;" >');
-vote_form.push('<% submitted_word=params[:word] %>');
-vote_form.push('<% keyword=Keyword.where(:name => submitted_word).first%>');
-vote_form.push('<%synonym_list=keyword.synonyms.limit(4) %>');
-vote_form.push('<p id="text" style="color:white;" > من فضلك اختار معني لكلمة "<%= keyword.name %>"!</p>');
+vote_form.push('<% submitted_word = @word %>');
+vote_form.push('<% keyword = @keyword%>');
+vote_form.push('<% syn_list = @synonym_list %>');
+vote_form.push('<p id="text" style="color:white;" > من فضلك اختار معني لكلمة "<%= @word %>"!</p>');
 vote_form.push('<br/>');
 vote_form.push('<div class="btn-toolbar" id="synonym_buttons">');
 vote_form.push('<% i=1 %>');
-vote_form.push('<%synonym_list.each do |syn|%>');
+vote_form.push('<% syn_list.each do |syn|%>');
 vote_form.push('<% if i%2==1 %><div class="btn-group" id="synonym_buttons_row"><% end%>');
 vote_form.push('<% if syn.approved %>');
 vote_form.push('<button class="btn btn-success" id="synonym_button" type="submit" onclick="record_vote(<%= syn.id %>)"><%= syn.name %></button>');
 vote_form.push('<% end %>');
-vote_form.push('<% if syn.approved %>');
 vote_form.push('<% if i%2==0 %></div></br><% end %>');
 vote_form.push('<% i=i+1 %>');
 vote_form.push('<% end %>');
-vote_form.push('<% end %>');
 vote_form.push('</br><div class="span6" id="box_buttons">');
-vote_form.push('</br><button class="btn btn-primary span2" type="submit" id="suggest_synonym_button"  onclick="suggest_synonym_to_word(<%= keyword.id %>);" >سجل هذا المعني</button>');
+vote_form.push('</br><button class="btn btn-primary span2" type="submit" id="suggest_synonym_button"  onclick="suggest_synonym_to_word(<% if keyword %><%= keyword.id %><% end %>);" >سجل هذا المعني</button>');
 vote_form.push('<input type="text" class="span3" id="suggest_synonym_textbox" placeholder="ادخل معني مختلف" >');
 vote_form.push('</div>')
 vote_form.push('</div></br>');
@@ -90,6 +88,7 @@ vote_form.push('<div style="float:left;" id="skip_button">');
 vote_form.push('<button class="btn btn-primary" id="skip_button" type="submit" onclick="skip_keyword()"> <<  تخطي هذه الكلمة</button>');
 vote_form.push('</div>');
 vote_form.push('</div>');
+
 
 vote_form=vote_form.join('');
 
