--- a/arability/app/views/games/halloffame.js.erb
+++ b/arability/app/views/games/halloffame.js.erb
@@ -1,13 +1,12 @@
-// $('.zone').empty();
 $('#loading-server').remove();
 english = '<div style = "color: white; width:600px; margin:0 auto" align="center"><h2>Hall of Fame</h2><label>Your Twitter Followers</label><br>' +
-    '<table class="table"><thead align="center"><tr><td>Rank</td><td>name</td><td>Score</td><td>Trophies' +
-         '</td></tr></thead>' +
-    '<tbody align="center">' +
     '<% common = Authentication.get_common_twitter_followers(current_gamer) %>'+
     '<% if common.nil? %>' +
     '<p>You are not connected to Twitter</p>' +
     '<% else %>' +
+    '<table class="table"><thead align="center"><tr><td>Rank</td><td>name</td><td>Score</td><td>Trophies' +
+         '</td></tr></thead>' +
+    '<tbody align="center">' +
     '<% @gamers = Gamer.find(common, :order => "highest_score DESC") %>' + 
     '<% rank = 0 %>'+
     '<% @gamers.each do |user| %>'+
@@ -28,15 +27,44 @@ english = '<div style = "color: white; width:600px; margin:0 auto" align="center
     '<% end %>' +
     '<% end %>' +
   '</tbody>' +
+'</table></div>'+
+'<div style = "color: white; width:600px; margin:0 auto" align="center"><label>Your Facebook Friends</label><br>' +
+    '<% common = Gamer.get_common_facebook_friends(current_gamer) %>'+
+    '<% if common.nil? %>' +
+    '<p>You are not connected to Facebook</p>' +
+    '<% else %>' +
+    '<table class="table"><thead align="center"><tr><td>Rank</td><td>name</td><td>Score</td><td>Trophies' +
+         '</td></tr></thead>' +
+    '<tbody align="center">'+
+    '<% @gamers = Gamer.find(common, :order => "highest_score DESC") %>'+
+    '<% rank = 0 %>'+
+    '<% @gamers.each do |user| %>'+
+    '<tr>'+
+      '<td><%= rank = rank + 1 %></td>'+
+      '<td><%= user.username %></td>'+
+      '<td><%= user.highest_score %></td>'+
+      '<% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>'+
+      '<td>'+
+        '<% if @Trophies.nil? %>'+
+        '<label>No Trophies</label>'+
+        '<% else %>'+
+        '<%= @Trophies.trophy_id %>'+
+        '<% end %>'+
+      '</td>'+
+    '</tr>'+
+    '<br>'+
+    '<% end %>'+
+    '<% end %>' +
+  '</tbody>'+
 '</table></div>';
 arabic = '<div style = "color: white; width:600px; margin:0 auto" align="center"><h2>قاعة المجد</h2><label>أصدقائك في تويتر</label><br>' +
+    '<% common = Authentication.get_common_twitter_followers(current_gamer) %>'+
+    '<% if common.nil? %>' +
+    '<p>انت غير متصل بتويتر</p>' +
+    '<% else %>' +
     '<table class="table"><thead align="center"><tr><td>ترتيب</td><td>الإسم</td><td>مجموع النقاط</td><td>الجوائز' +
          '</td></tr></thead>' +
     '<tbody align="center">' +
-    '<% common = Authentication.get_common_twitter_followers(current_gamer) %>'+
-    '<% if common.nil? %>' +
-    '<p>You are not connected to Twitter</p>' +
-    '<% else %>' +
     '<% @gamers = Gamer.find(common, :order => "highest_score DESC") %>' + 
     '<% rank = 0 %>'+
     '<% @gamers.each do |user| %>'+
@@ -57,6 +85,35 @@ arabic = '<div style = "color: white; width:600px; margin:0 auto" align="center"
     '<% end %>' +
     '<% end %>' +
   '</tbody>' +
+'</table></div>'+
+'<div style = "color: white; width:600px; margin:0 auto" align="center"><label>أصدقائك في فايس بوك</label><br>' +
+    '<% common = Gamer.get_common_facebook_friends(current_gamer) %>'+
+    '<% if common.nil? %>' +
+    '<p>انت غير متصل بفايس بوك</p>' +
+    '<% else %>' +
+    '<table class="table"><thead align="center"><tr><td>ترتيب</td><td>الإسم</td><td>مجموع النقاط</td><td>الجوائز' +
+         '</td></tr></thead>' +
+    '<tbody align="center">' +
+    '<% @gamers = Gamer.find(common, :order => "highest_score DESC") %>'+
+    '<% rank = 0 %>'+
+    '<% @gamers.each do |user| %>'+
+    '<tr>'+
+      '<td><%= rank = rank + 1 %></td>'+
+      '<td><%= user.username %></td>'+
+      '<td><%= user.highest_score %></td>'+
+      '<% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>'+
+      '<td>'+
+        '<% if @Trophies.nil? %>'+
+        '<p>لا يوجد جوائز</p>' +
+        '<% else %>'+
+        '<%= @Trophies.trophy_id %>'+
+        '<% end %>'+
+      '</td>'+
+    '</tr>'+
+    '<br>'+
+    '<% end %>'+
+    '<% end %>' +
+  '</tbody>'+
 '</table></div>';
 <% if I18n.locale==:en %>
 $(".zone").append($(english));
