home page edited

--- a/arability/app/assets/stylesheets/pages.css.scss
+++ b/arability/app/assets/stylesheets/pages.css.scss
@@ -21,4 +21,11 @@ img.game-preview {
 
 div.game-preview-container a {
 	text-decoration: none;
+	margin-top: 20%;
+	line-height: 30px;
+}
+
+div.game-preview-container div {
+	width: 50%;
+	float: left;
 }
