--- a/arability/app/views/pages/_game-intro.html.erb
+++ b/arability/app/views/pages/_game-intro.html.erb
@@ -1,5 +1,9 @@
 <div class="game-preview-container">
-	<legend><h1><a>Play the Arability Game</a></h1></legend>
-	<a href="/game" class="btn btn-info btn-large pull-right">PLAY</a>
-	<img class="game-preview" src="/assets/Game_screenShot.png">
+	<div>
+		<img class="game-preview" src="/assets/Game_screenShot.png">
+	</div>
+	<div>
+		<h1><a>Play the Arability Game And contribute</a></h1>
+		<a href="/game" class="btn btn-info btn-large-play span4">PLAY</a>
+	</div>
 </div>
