[ISSUE #180][ISSUE #184][WIP] adds documentation

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -128,6 +128,15 @@ function getPrizes(level, score) {
     <% end %> 
   }
 
+  // Author:
+  //   Amr Abdel-raouf
+  // Description:
+  //   Displays the static html where a user can invite from facebook
+  // Params:
+  //   None
+  // Success:
+  //   The html is rendered and a button appears where on click it posts
+  //   an invitation on facebook
   function inviteFriends(){
     clear();
     $('#zone').append('<a href="/post_score"><img src="/assets/facebook_share.png" style="height:150px; position:relative;top:70px;right:190px;"></a>');
