--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -142,22 +142,22 @@
     <div class="tab-pane" id="tab2">
       <div class="well" style="width:1100px; height:480px">
         <% if !current_gamer.is_connected_to_facebook %>
-        <div>
+        <div class="amr" style="width: 344px;margin-right: auto;margin-left: auto;">
           <% if I18n.locale == :en %>
           <img src="/assets/facebook_logo.png" width="100px" height="100px" style="float:left">
           <% else %>
           <img src="/assets/facebook_logo.png" width="100px" height="100px" style="float:right">
           <% end %>
-          <p font='20' style="position:relative; padding:40px;"><%= t(:connect_to)%> <%= link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></p>
+          <span font='20' style="position:relative; padding:40px;top:40px"><%= t(:connect_to)%> <%= link_to t(:facebook), gamer_omniauth_authorize_path(:facebook) %></span>
         </div>
         <% else %>
-        <div>
+        <div class="amr" style="width: 344px;margin-right: auto;margin-left: auto;">
           <% if I18n.locale == :en %>
           <img src="/assets/facebook_logo.png" width="100px" height="100px" style="float:left">
           <% else %>
           <img src="/assets/facebook_logo.png" width="100px" height="100px" style="float:right">
           <% end %>
-          <p font='20' style="position:relative; padding:40px;"><%= t(:disconnect_from)%> <%= link_to t(:facebook), :controller => :games, :action => :disconnect_facebook %></p>
+          <span font='20' style="position:relative; padding:40px;top:40px"><%= t(:disconnect_from)%> <%= link_to t(:facebook), "/games/disconnect_facebook" %></span>
         </div>
         <% end %>
         <% end %>
