[ISSUE #184][WIP] fixes the documentation for inviteFriends()

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -137,6 +137,8 @@ function getPrizes(level, score) {
   // Success:
   //   The html is rendered and a button appears where on click it posts
   //   an invitation on facebook
+  // Failure:
+  //   None
   function inviteFriends(){
     clear();
     $('#zone').append('<a href="/post_score"><img src="/assets/facebook_share.png" style="height:150px; position:relative;top:70px;right:190px;"></a>');
